go/pkg/infaas-dispatcher/deployment/infaas-resources/templates/namespace-ingress-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: ingress-nginx
