go/pkg/infaas-dispatcher/deployment/infaas-resources/templates/habana-k8s-device-plugin.yaml
# Copyright (c) 2022, HabanaLabs Ltd.  All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: v1
kind: Namespace
metadata:
  name: habana-system
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: habanalabs-device-plugin-daemonset
  namespace: habana-system
spec:
  selector:
    matchLabels:
      name: habanalabs-device-plugin-ds
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: habanalabs-device-plugin-ds
    spec:
#      nodeSelector:
#        accelerator: "habana"
      priorityClassName: "system-node-critical"
      containers:
        - image: amr-idc-registry.infra-host.com/cache/moditamam/docker-k8s-device-plugin@sha256:95da539d95efb944792f082683279e64c64b07393ad57e193c9a1b3d9388f18c
          name: habanalabs-device-plugin-ctr
          securityContext:
            privileged: true
          volumeMounts:
            - name: device-plugin
              mountPath: /var/lib/kubelet/device-plugins
      volumes:
        - name: device-plugin
          hostPath:
            path: /var/lib/kubelet/device-plugins
